# scummvm-exult

./: CMakeLists.txt  README.exult_integration.md  scummvm_coding_conventions_summary.md  scummvm_commit_guidelines_summary.md  scummvm_developer_central_summary.md
engines/exult/: CMakeLists.txt  Engine.SCons  exult_audio_adapter.cpp  exult_audio_adapter.h  exult_engine.cpp  exult_engine.h  exult_file_adapter.cpp  exult_file_adapter.h  exult_graphics_adapter.cpp  exult_graphics_adapter.h  exult_input_adapter.cpp  exult_input_adapter.h  exult_keymap.cpp  exult_keymap.h  metaengine.cpp  module.mk
engines/exult/adapter/: ScummVMAudioAdapter.h  ScummVMFileAdapter.h  ScummVMTimerAdapter.h  ScummVMWindowAdapter.h
engines/exult/exult_core_src/: README.scummvm_integration.md  exult.h  exult_scummvm_api.cpp  exult_scummvm_api.h  exultmenu.cc  game.cc  keys.cc  keys.h
engines/exult/exult_core_src/audio/: Audio.cc  Audio.h  AudioMixer.cc  AudioMixer.h  Midi.cc
engines/exult/exult_core_src/files/: Flat.h  Flex.cc  Flex.h  IFF.cc  IFF.h  Table.cc  Table.h  U7file.h  U7fileman.cc  U7fileman.h
engines/exult/exult_core_src/flic/: playfli.h
engines/exult/exult_core_src/gamemgr/: bggame.cc  sigame.cc
engines/exult/exult_core_src/gumps/: Gump.cc  Notebook_gump.cc
engines/exult/exult_core_src/imagewin/: imagewin.cc  imagewin.h
engines/exult/exult_core_src/shapes/: font.cc  (+4 more)
engines/exult/facade/: AudioFacade.h  FileFacade.h  GumpsFacade.h  TimerFacade.h
engines/exult/include/: IAudioStream.h  IFileSource.h  ITimer.h  IWindow.h
engines/exult/src/: ExultEngine.cpp
(+46 files in other folders)
